# kickhatsnare

./: AGENTS.md  Cargo.toml  README.md
core/: Cargo.toml
core/src/: application.rs  lib.rs
core/src/audio/: decoder.rs  mod.rs  renderer.rs  waveform.rs
core/src/settings/: mod.rs
core/src/storage/: mod.rs
core/src/system/: mod.rs
core/src/workspace/: mix_graph.rs  mod.rs  timeline.rs
desktop/: .oxfmtrc.json  components.json  electron-builder.yml  electron.vite.config.ts  oxlint.json  package.json  tsconfig.node.json  tsconfig.web.json
desktop/scripts/: stage-server.mjs
desktop/src/main/: index.ts  server-process.ts  workspace-watcher.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: index.html
protocol/: Cargo.toml
protocol/src/: contract.rs  envelope.rs  lib.rs
protocol/src/audio/: get_transport.rs  get_waveform_peaks.rs  mod.rs  pause.rs  play.rs  seek.rs  set_loop_region.rs  stop.rs
protocol/src/settings/: get.rs  mod.rs  set.rs
protocol/src/system/: mod.rs  ping.rs
protocol/src/workspace/: add_audio_clip.rs  connect_mix_ports.rs  create_directory.rs  delete_entry.rs  delete_timeline_clip.rs  delete_timeline_track.rs  disconnect_mix_ports.rs  get.rs  import_audio.rs  mod.rs  move_entry.rs  new.rs  open.rs  reconcile_moved_files.rs  recover_missing_media.rs  redo.rs  save.rs  save_as.rs  save_timeline_clip.rs  save_timeline_track.rs  set_master_mix.rs  set_mix_node_position.rs  set_timeline_clip_properties.rs  set_timeline_settings.rs  split_timeline_clip.rs  undo.rs
server/: Cargo.toml
server/src/: main.rs  transport.rs
(+74 files in other folders)
