[workspace]
members = ["core", "protocol", "server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
