[package]
name = "kickhatsnare-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arc-swap = "1.7.1"
crossbeam-queue = "0.3.12"
rodio = "0.21.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
tempfile = "3.20.0"

[lints]
workspace = true
