[package]
name = "kickhatsnare-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

[lints]
workspace = true
